--- a/feeds.conf
+++ b/feeds.conf
@@ -5,3 +5,4 @@
 src-git passwallpackages https://github.com/xiaorouji/openwrt-passwall-packages.git;main
 src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main
 src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main
+src-git helloworld https://github.com/fw876/helloworld.git;main
