--- a/feeds.conf
+++ b/feeds.conf
@@ -2,7 +2,7 @@
 #src-git nas_luci https://github.com/linkease/nas-packages-luci.git;main
 #src-git istore https://github.com/linkease/istore.git;main
 #src-git cups https://github.com/sirpdboy/luci-app-cupsd.git;main
-src-git passwallpackages https://github.com/xiaorouji/openwrt-passwall-packages.git;main
-src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main
-src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main
+#src-git passwallpackages https://github.com/xiaorouji/openwrt-passwall-packages.git;main
+#src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main
+#src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main
 src-git helloworld https://github.com/fw876/helloworld.git;main
